--- a/src/main/views/court-details/in-person-court.njk
+++ b/src/main/views/court-details/in-person-court.njk
@@ -1,5 +1,4 @@
 {% from "govuk/components/warning-text/macro.njk" import govukWarningText %}
-{% from "../macros/location-seo-metadata.njk" import locationMetadata %}
 
 {% extends "template.njk" %}
 
@@ -8,8 +7,8 @@
 {% endblock %}
 
 {% block content %}
-{% set imagePaths = [results.image_file] %}
-{{ locationMetadata('Courthouse', results.name, results.addresses[0], fullPath, imagePaths) }}
+
+<script type="application/ld+json">{{ seoMetadata | dump | safe }}</script>
 
 <div class="govuk-grid-row court-tribunal-details">
   <div class="govuk-grid-column-full">
