FACT-320 Implemented safe filter for page title/description printing in nunjucks template

--- a/src/main/views/template.njk
+++ b/src/main/views/template.njk
@@ -5,7 +5,7 @@
 
 {% block head %}
   {% if seoMetadataDescription %}
-    <meta name="description" content="{{ seoMetadataDescription }}">
+    <meta name="description" content="{{ seoMetadataDescription | safe }}">
   {% endif %}
   {% include "webpack/css.njk" %}
   <script>
