--- a/src/main/views/search/location.njk
+++ b/src/main/views/search/location.njk
@@ -44,7 +44,7 @@
           {% endif %}
         </h2>
         <input class="govuk-input govuk-!-width-three-quarters {{ 'govuk-input--error' if error.text }}" id="search" name="search" type="text" value="{{ search }}">
-        <button type="submit" class="govuk-button continue">Search</button>
+        <button type="submit" class="govuk-button continue">{{ button }}</button>
       </div>
     </form>
 
