--- a/src/main/views/choose-action.njk
+++ b/src/main/views/choose-action.njk
@@ -50,7 +50,7 @@
              value: "update"
           },
           {
-             divider: "or"
+             divider: divider
           },
           {
              id: "not-listed",
