FACT-333 - Added Google site verification metadata tag into head inside template.njk

--- a/src/main/views/template.njk
+++ b/src/main/views/template.njk
@@ -13,6 +13,7 @@
     dataLayer.push({"language": "{{ language }}", "event": "Site language"})
   </script>
 
+  <meta name="google-site-verification" content="3glfkE1sBXj7EtEdO0ktOm5kyR9E14kR7yw_yJ6GH4U" />
   <!-- Google Tag Manager -->
   <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push(
   {'gtm.start': new Date().getTime(),event:'gtm.js'}
