--- a/src/main/assets/scss/main.scss
+++ b/src/main/assets/scss/main.scss
@@ -19,16 +19,12 @@
     margin-bottom: 0;
   }
 
-  button {
-    margin-bottom: 0;
-  }
-
   a {
     margin-bottom: 0;
   }
 
   p {
-    margin-bottom: 0;
+    margin-bottom: 10px;
   }
 }
 
