FACT-389 - Set optional cookies to be opt-out by default within cookie preference page.

--- a/src/main/views/cookies.njk
+++ b/src/main/views/cookies.njk
@@ -177,12 +177,12 @@
       items: [
         {
           value: 'on',
-          text: 'Use cookies that measure my website use',
-          checked: true
+          text: 'Use cookies that measure my website use'
         },
         {
           value: 'off',
-          text: 'Do not use cookies that measure my website use'
+          text: 'Do not use cookies that measure my website use',
+          checked: true
         }
       ]
     }) }}
